[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/MainMenuTest.gd" type="Script" id=1]
[ext_resource path="res://Sounds/ImportedSounds/Retro2.wav" type="AudioStream" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.0
margin_top = 200.0
margin_right = 78.0
margin_bottom = -200.0

[node name="StartButton" type="Button" parent="MainMenu"]
margin_right = 125.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="MainMenu"]
margin_top = 24.0
margin_right = 125.0
margin_bottom = 44.0
focus_neighbour_bottom = NodePath("../QuitButton")
text = "options"

[node name="QuitButton" type="Button" parent="MainMenu"]
margin_top = 48.0
margin_right = 125.0
margin_bottom = 68.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_right = 100.0

[node name="Label" type="Label" parent="Options"]
margin_right = 200.0
margin_bottom = 14.0
text = "Options"
align = 1

[node name="Label2" type="Label" parent="Options"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 66.0
text = "Master Volume

"

[node name="MasterSlider" type="HSlider" parent="Options"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 86.0
min_value = -30.0
max_value = 0.0

[node name="BackButton" type="Button" parent="Options"]
margin_top = 90.0
margin_right = 200.0
margin_bottom = 110.0
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -11.174
pitch_scale = 0.5

[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="Options/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_BackButton_pressed"]
